--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1068,6 +1068,7 @@
 	"workerList.item.jobList.empty": "No current jobs",
 	"workerList.item.jobListTitle": "Current Jobs",
 	"workerList.item.netListTitle": "Network Interfaces",
+	"workerList.item.memoryMonitorTitle": "Memory Monitoring",
 	"workerList.item.chartsTitle": "Performance Monitoring",
 	"workerList.item.copyAddressToClipboard": "Address copied to clipboard",
 	"workerList.actionBox.title": "Available on the Enterprise plan",
